--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                <div class="text-right col collapse navbar-collapse " id="navbarSupportedContent">
                    <ul class= " navbar-nav me-auto mb-2 mb-lg-0 text-primary">
                        <li class="nav-item">
-                           <a class="nav-link active text-primary" aria-current="page" href="#">Home</a>
+                           <a class="nav-link active text-primary" aria-current="page" href="./index.html">Index</a>
                        </li>
                        <li class="nav-item">
-                           <a class="nav-link text-primary" href="#">About</a>
+                           <a class="nav-link text-primary" href="./form.html">Form</a>
                        </li>
                        <li class="nav-item">
                            <a class="nav-link text-primary" href="#">Services</a>
