--- a/index.html
+++ b/index.html
@@ -3,17 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/bootstrap.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="css/bootstrap-reboot.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
-    <link rel="stylesheet" href="css/c3.css">
-    <link rel="stylesheet" href="fonts/css/font-awesome.css">
 </head>
 <body class="">
 
@@ -21,7 +13,7 @@
        <nav class=" row navbar navbar-expand-lg navbar-light bg-light">
 
            <div class="container">
-               <div class="col-6">
+               <div class="container col-6">
                    <a class="navbar-brand col" href="#"><h1 class="text-primary">OnePage</h1></a>
                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                        <span class="navbar-toggler-icon"></span>
@@ -34,23 +26,6 @@
                        </li>
                        <li class="nav-item">
                            <a class="nav-link text-primary" href="./form.html">Form</a>
-                       </li>
-                       <li class="nav-item">
-                           <a class="nav-link text-primary" href="#">Services</a>
-                       </li>
-                       <li class="nav-item">
-                           <a class="nav-link text-primary" href="#">Portfolio</a>
-                       </li>
-                       <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle text-primary" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                               Dropdown
-                           </a>
-                           <ul class="dropdown-menu text-primary" aria-labelledby="navbarDropdown">
-                               <li><a class="dropdown-item" href="#">Services</a></li>
-                               <li><a class="dropdown-item" href="#">Portfolio</a></li>
-                               <li><hr class="dropdown-divider"></li>
-                               <li><a class="dropdown-item" href="#">Something else here</a></li>
-                           </ul>
                        </li>
                        <li>
                            <button class="btn btn-primary">Get Started</button>
@@ -71,52 +46,52 @@
 </div>
 <div class="container pt-5">
     <div class="row">
-        <div class="col">
-            <div class="bg-white pt-4" >
+        <div class="col text-center">
+            <div class="bg-dark pt-4" >
                 <div class="text-center ">
                     <i class="fa fa-paint-brush text-primary fa-3x"></i>
                 </div>
                 <div class="card-body">
                     <h5 class="card-title text-primary">Lorem Ipsum</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    >
+                    <i class="fa fa-dot-circle-o"></i>
                 </div>
             </div>
         </div>
 
-        <div class="col">
-            <div class="bg-white pt-4" >
+        <div class="col text-center">
+            <div class="bg-dark pt-4" >
                 <div class="text-center ">
-                    <i class="fa fa-paint-brush text-primary fa-3x"></i>
+                    <i class="fa fa-twitter text-primary fa-3x"></i>
                 </div>
                 <div class="card-body">
                     <h5 class="card-title text-primary">Lorem Ipsum</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    >
+                    <i class="fa fa-dot-circle-o"></i>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div class="bg-white pt-4" >
+        <div class="col text-center">
+            <div class="bg-dark pt-4" >
                 <div class="text-center ">
-                    <i class="fa fa-paint-brush text-primary fa-3x"></i>
+                    <i class="fa fa-link text-primary fa-3x"></i>
                 </div>
                 <div class="card-body">
                     <h5 class="card-title text-primary">Lorem Ipsum</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    >
+                    <i class="fa fa-dot-circle-o"></i>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div class="bg-white pt-4" >
+        <div class="col text-center">
+            <div class="bg-dark pt-4" >
                 <div class="text-center ">
-                    <i class="fa fa-paint-brush text-primary fa-3x"></i>
+                    <i class="fa fa-instagram text-primary fa-3x"></i>
                 </div>
                 <div class="card-body">
                     <h5 class="card-title text-primary">Lorem Ipsum</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    >
+                    <i class="fa fa-dot-circle-o"></i>
                 </div>
             </div>
         </div>
@@ -126,15 +101,16 @@
     </div>
 </div>
 
-<div class="container pt-5">
+
+<div class="m-5  align-self-center  pt-5">
 
         <div class="text-center">
             <h1 class="text-primary">ABOUT US</h1>
             <div><p>Some text Some text Some text Some text Some text</p></div>
 
         </div>
-    <div class="row pt-3">
-        <div class="col">
+    <div class=" row pt-3">
+        <div class="col-6 text-right">
             <div><p>Some text Some text Some text Some text Some text</p></div>
             <div>
                 <p><i class="fa fa-reply-all text-success"></i> Some text Some text Some text Some text Some text</p>
@@ -144,7 +120,7 @@
             </div>
 
         </div>
-        <div class="col">
+        <div class="col-4">
             <div><p>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text</p></div>
             <button class="btn btn-light text-primary border-primary">Learn More</button>
         </div>
@@ -173,7 +149,7 @@
     </div>
 </div>
 
-<div class="container pt-3">
+<div class="container p-3">
     <div class="text-center">
         <h1 class="text-primary">Testomonian</h1>
         <div><p>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text</p></div>
@@ -186,7 +162,7 @@
 
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 
-                    <img class="rounded-circle" width="100px" height="100px" class="card-img-top" >
+                    <img src="https://ichef.bbci.co.uk/news/976/cpsprodpb/67CF/production/_108857562_mediaitem108857561.jpg" class="rounded-circle" width="100px" height="100px" class="card-img-top" >
                     <h5 class="card-title">Card title</h5>
                     <p>Some text</p>
                 </div>
@@ -199,7 +175,7 @@
 
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 
-                    <img class="rounded-circle" width="100px" height="100px" class="card-img-top" >
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Eopsaltria_australis_-_Mogo_Campground.jpg/1200px-Eopsaltria_australis_-_Mogo_Campground.jpg" class="rounded-circle" width="100px" height="100px" class="card-img-top" >
                     <h5 class="card-title">Card title</h5>
                     <p>Some text</p>
                 </div>
@@ -212,7 +188,7 @@
 
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 
-                    <img class="rounded-circle" width="100px" height="100px" class="card-img-top" >
+                    <img src="https://www.thespruce.com/thmb/b45NsEHSrZ7kcZqQTR9USncofp8=/1138x1138/smart/filters:no_upscale()/bird-bill-parts-387362-hero-94dfe8a28cf74e83a36945b850bd6d4c.jpg" class="rounded-circle" width="100px" height="100px" class="card-img-top" >
                     <h5 class="card-title">Card title</h5>
                     <p>Some text</p>
                 </div>
@@ -220,7 +196,7 @@
         </div>
     </div>
 </div >
-<div class="bg-secondary">
+<div class="p-3 bg-secondary">
        <div class="container pt-3 ">
            <div class="text-center">
                <h1 class="text-primary">Services</h1>
@@ -319,7 +295,7 @@
        </div>
 </div>
 
-<div class="bg-primary pt-5 pb-3">
+<div class=" bg-primary pt-5 pb-3">
     <div class="container text-light text-center">
         <div><h1>Call to action</h1></div>
         <p>Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text Some text</p>
@@ -329,7 +305,7 @@
 
 
        <div class="bg-light pt-5 pb-3">
-           <div class="container text-dark text-center">
+           <div class="container text-light text-center">
                <h1>
                    Pricing
                </h1>
@@ -390,7 +366,7 @@
     <div class="row pt-3">
         <div class="col">
             <footer>
-                <div> <i class="fa fa-copyright"></i>Copyright 2015 <b>OnePage</b> All Rights </div>
+                <div> <i class="fa fa-copyright"></i>Copyright 2021 <b>OnePage</b> All Rights </div>
             </footer>
             <div>
                 Designed by <a href="#">Bootstrap Mode</a>
@@ -398,39 +374,18 @@
         </div>
 
 
-
-        <div class="col-1">
-            <ul class= "text-right navbar-nav   text-primary">
-                <li class="nav-item">
-                    <a class="nav-link active text-primary " aria-current="page" href="#"><a class="bg-primary text-light p-3 rounded-pill" href="#"><i class="fa fa-facebook fa-lg "></i></a></a>
+        <div class="col">
+            <ul class="">
+                <li class="btn">
+                    <a><i class="btn btn-primary rounded-circle fa fa-facebook "></i></a>
+                    <a><i class="btn btn-primary rounded-circle fa fa-instagram "></i></a>
+                    <a><i class="btn btn-primary rounded-circle fa fa-linkedin "></i></a>
+                    <a><i class="btn btn-primary rounded-circle fa fa-twitter "></i></a>
                 </li>
-            </ul>
 
-        </div>
-        <div class="col-1">
-            <ul class= "text-right navbar-nav   text-primary">
-                <li class="nav-item">
-                    <a class="nav-link active text-primary " aria-current="page" href="#"><a class="bg-primary text-light p-3 rounded-pill" href="#"><i class="fa fa-instagram fa-lg "></i></a></a>
-                </li>
             </ul>
-
         </div>
-        <div class="col-1">
-            <ul class= "text-right navbar-nav   text-primary">
-                <li class="nav-item">
-                    <a class="nav-link active text-primary " aria-current="page" href="#"><a class="bg-primary text-light p-3 rounded-pill" href="#"><i class="fa fa-twitter fa-lg "></i></a></a>
-                </li>
-            </ul>
 
-        </div>
-        <div class="col-1">
-            <ul class= "text-right navbar-nav   text-primary">
-                <li class="nav-item">
-                    <a class="nav-link active text-primary" aria-current="page" href="#"><a class="bg-primary text-light p-3 rounded-pill" href="#"><i class="fa fa-linkedin fa-lg "></i></a></a>
-                </li>
-            </ul>
-
-        </div>
     </div>
 </div>
 
