--- a/form.html
+++ b/form.html
@@ -19,7 +19,7 @@
 <nav class=" row navbar navbar-expand-lg navbar-light bg-light">
 
   <div class="container">
-    <div class="col-6">
+    <div class="container col-6">
       <a class="navbar-brand col" href="#"><h1 class="text-primary">OnePage</h1></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,23 +33,7 @@
         <li class="nav-item">
           <a class="nav-link text-primary" href="./form.html">Form</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link text-primary" href="#">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-primary" href="#">Portfolio</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-primary" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu text-primary" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Services</a></li>
-            <li><a class="dropdown-item" href="#">Portfolio</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
+        
         <li>
           <button class="btn btn-primary">Get Started</button>
         </li>
