--- a/form.html
+++ b/form.html
@@ -3,44 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
-  <link rel="stylesheet" href="css/bootstrap-reboot.css">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/bootstrap-grid.css">
-  <link rel="stylesheet" href="css/c3.css">
-  <link rel="stylesheet" href="fonts/css/font-awesome.css">
+    <link rel="stylesheet" href="./css/bootstrap.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<nav class=" row navbar navbar-expand-lg navbar-light bg-light">
+  <nav class=" row navbar navbar-expand-lg navbar-light bg-light">
 
-  <div class="container">
-    <div class="container col-6">
-      <a class="navbar-brand col" href="#"><h1 class="text-primary">OnePage</h1></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-    <div class="text-right col collapse navbar-collapse " id="navbarSupportedContent">
-      <ul class= " navbar-nav me-auto mb-2 mb-lg-0 text-primary">
-        <li class="nav-item">
-          <a class="nav-link active text-primary" aria-current="page" href="./index.html">Index</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-primary" href="./form.html">Form</a>
-        </li>
-        
-        <li>
-          <button class="btn btn-primary">Get Started</button>
-        </li>
-      </ul>
+    <div class="container">
+        <div class="container col-6">
+            <a class="navbar-brand col" href="#"><h1 class="text-primary">OnePage</h1></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="text-right col collapse navbar-collapse " id="navbarSupportedContent">
+            <ul class= " navbar-nav me-auto mb-2 mb-lg-0 text-primary">
+                <li class="nav-item">
+                    <a class="nav-link active text-primary" aria-current="page" href="./index.html">Index</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-primary" href="./form.html">Form</a>
+                </li>
+                <li>
+                    <button class="btn btn-primary">Get Started</button>
+                </li>
+            </ul>
 
+        </div>
     </div>
-  </div>
 </nav>
 
 
